# nanobot

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md
.devcontainer/: .env  Dockerfile  Dockerfile.local  Dockerfile.nano  devcontainer-test.json  devcontainer.json  devcontainer.local.json  devcontainer.nano.json  docker-compose.yaml
3d_parts/: base.step  battery_holder_back.step  battery_holder_front.step  camera_holder.step  spacer_2_5mm.step  spacer_35mm.step  top.step  wheel_connector.step
ros_ws/: cyclonedds_profile.xml  third_parties.repos  third_party.repos
ros_ws/.devcontainer/: Dockerfile  Dockerfile.local  Dockerfile.nano  devcontainer.json  devcontainer.local.json  devcontainer.nano.json
ros_ws/scripts/: build.sh  clean.sh  control.sh  dev_environment.sh  magnetometer_calibration.py  remote_control.sh  start.sh
ros_ws/src/bringup/: CMakeLists.txt  package.xml
ros_ws/src/bringup/launch/: robot.launch.py  rsp.launch.py  simulation.launch.py
ros_ws/src/control/: CMakeLists.txt  diffdrive_nanobot.xml  package.xml
ros_ws/src/control/config/: diffdrive_controllers.yaml  gazebo_diffdrive_controllers.yaml
ros_ws/src/control/description/: gazebo_ros2_control.xacro  ros2_control.xacro
ros_ws/src/control/hardware/: nanobot_system.cpp
ros_ws/src/control/hardware/include/diffdrive_nanobot/: dynamixel_comms.hpp  nanobot_system.hpp  wheel.hpp
ros_ws/src/description/: CMakeLists.txt  package.xml
ros_ws/src/description/urdf/: gazebo_control.xacro  gazebo_ros2_control.xacro  inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
ros_ws/src/nanobot_bringup/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_bringup/launch/: control.launch.py  monitor.launch.py  robot.launch.py  rsp.launch.py  simulation.launch.py
ros_ws/src/nanobot_camera/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_camera/config/: camera.yaml
ros_ws/src/nanobot_camera/docker/: Dockerfile  camera_config.yaml  entrypoint.sh
ros_ws/src/nanobot_camera/include/nanobot_camera/: DockerRunnerNode.hpp
ros_ws/src/nanobot_camera/launch/: camera.launch.py
ros_ws/src/nanobot_camera/src/: run_container.cpp
ros_ws/src/nanobot_camera/src/nanobot_camera/: DockerRunnerNode.cpp
ros_ws/src/nanobot_description/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_description/urdf/: camera.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
ros_ws/src/nanobot_diffdrive/: CMakeLists.txt  nanobot_diffdrive.xml  package.xml
ros_ws/src/nanobot_diffdrive/config/: diffdrive_controllers.yaml  gazebo_diffdrive_controllers.yaml
ros_ws/src/nanobot_diffdrive/description/: gazebo_ros2_control.xacro  ros2_control.xacro
ros_ws/src/nanobot_diffdrive/hardware/: dynamixel_comms.cpp  nanobot_system.cpp  wheel.cpp
ros_ws/src/nanobot_diffdrive/hardware/include/nanobot_diffdrive/: dynamixel_comms.hpp  nanobot_system.hpp  wheel.hpp
ros_ws/src/nanobot_imu/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_imu/config/: ekf.yaml  imu.yaml  madgwick_filter.yaml
ros_ws/src/nanobot_imu/include/nanobot_imu/: BNO085.hpp  ImuNode.hpp  MPU9250Driver.hpp
ros_ws/src/nanobot_imu/launch/: imu.launch.py
ros_ws/src/nanobot_imu/src/: imu_main.cpp
ros_ws/src/nanobot_imu/src/nanobot_imu/: BNO085.cpp  ImuNode.cpp  MPU9250Driver.cpp
ros_ws/src/nanobot_joystick/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_joystick/config/: joystick.yaml
ros_ws/src/nanobot_joystick/launch/: joystick.launch.py
ros_ws/src/nanobot_lidar/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_lidar/config/: lidar.yaml
ros_ws/src/nanobot_lidar/launch/: lidar.launch.py
ros_ws/src/nanobot_navigation/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_navigation/config/: mapper_params_online_async.yaml  nav2_params.yaml
ros_ws/src/nanobot_navigation/launch/: load_navigation.launch.py  nav2_localization.launch.py  navigation.launch.py  navigation_launch.py  slam_toolbox_online_async.launch.py
ros_ws/src/nanobot_navigation/maps/: boxes.data  boxes.pgm  boxes.yaml  room.data  room.pgm  room.yaml  room2.data  room2.pgm  room2.yaml
ros_ws/src/nanobot_simulation/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_simulation/config/: gz_bridge.yaml  mapper_params_online_async.yaml  nanobot.rviz
ros_ws/src/nanobot_simulation/worlds/: box.world  boxes.sdf  boxes.world
ros_ws/src/nanobot_web/: CMakeLists.txt  package.xml
ros_ws/src/nanobot_web/launch/: web.launch.py
ros_ws/src/simulation/: CMakeLists.txt  package.xml
ros_ws/src/simulation/config/: opibot.rviz
scripts/: build.sh  clean.sh  control.sh  dev.sh  docker_launch.sh  docker_run_host.sh  docker_run_nano.sh  monitor.sh  start.sh
web_app/: index.html  package-lock.json  package.json
web_app/src/: App.css  App.jsx  index.css
